# bank-analyzer

./: .gitignore  LICENSE  README.md  TEST_LIVE_RESULTS.md  check_status.py  generate_test_csv.py  gui.py  main.py  migrate_budget.py  migrate_db.py  migrate_notes_tags.py  migrate_savings.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_import.py
.github/: copilot-instructions.md
data/: .gitkeep  test_100_transactions.csv
docs/: API.md  CAHIER_DES_CHARGES.md  GUI_GUIDE.md
src/: __init__.py  analyzer.py  categorizer.py  cli.py  database.py  gui.py  importer.py
tests/: CA20251024_175416.csv  CA20251027_093836.xlsx  test_categorizer.py  test_importer.py  test_integration.py
